--- a/workflows/latest-youtube-videos.yml
+++ b/workflows/latest-youtube-videos.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   update-readme-with-blog:
-    name: Update this repo's README with latest blog posts
+    name: Update this repo's README with latest youtube videos
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -15,3 +15,4 @@ jobs:
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCCwyrumvGx6L_6pP5Oc6pIw"
+          comment_tag_name: "YOUTUBE-VIDEO-LIST"
