--- a/.github/workflows/latest-blog-posts.yml
+++ b/.github/workflows/latest-blog-posts.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Pull in dev.to posts
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
-          feed_list: "https://www.exdev.co/feeds/posts/default?alt=rss"
+          feed_list: "https://code-brains.blogspot.com/feeds/posts/default?alt=rss"
